ang.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-frontend
  template:
    metadata:
      labels:
        app: angular-frontend
    spec:
      containers:
        - name: angular-frontend
          image: malekkkk/achat:29.9
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: ClusterIP
  selector:
    app: angular-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
