dotnet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetapp
  template:
    metadata:
      labels:
        app: dotnetapp
    spec:
      containers:
        - name: dotnetapp
          image: devteam1009/dotnetapp:1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
spec:
  type: ClusterIP
  selector:
    app: dotnetapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
