spng.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: achatback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: achatback
  template:
    metadata:
      labels:
        app: achatback
    spec:
      containers:
        - name: achatback
          image: malekkkk/achatbdev:9.0
          ports:
            - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  type: ClusterIP
  selector:
    app: achatback
  ports:
    - name: http
      protocol: TCP
      port: 8089
      targetPort: 8089
