app-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /dotnet(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: dotnet-service
            port:
              number: 80
      - path: /php(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: php-app-service
            port:
              number: 80
      - path: /Angular(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: angular-service
            port:
              number: 80
